# 42

./: README.md
C00/ex00/: ft_putchar.c
C00/ex01/: ft_print_alphabet.c
C00/ex02/: ft_print_reverse_alphabet.c
C00/ex03/: ft_print_numbers.c
C00/ex04/: ft_is_negative.c
C00/ex05/: ft_print_comb.c
C00/ex06/: ft_print_comb2.c
C01/ex00/: ft_ft.c
C01/ex01/: ft_ultimate_ft.c
C01/ex02/: ft_swap.c
C01/ex03/: ft_div_mod.c
C01/ex04/: ft_ultimate_div_mod.c
C01/ex05/: ft_putstr.c
C01/ex06/: fr_strlen.c
C01/ex07/: ft_rev_int_tab.c
C01/ex08/: ft_sort_int_tab.c
C02/ex00/: ft_strcpy.c
C02/ex01/: ft_strncpy.c
C02/ex02/: ft_str_is_alpha.c
C02/ex03/: ft_str_is_numeric.c
C02/ex04/: ft_str_is_lowercase.c
C02/ex05/: ft_str_is_uppercase.c
C02/ex06/: ft_str_is_printable.c
C02/ex07/: ft_strupcase.c
C02/ex08/: ft_strlowcase.c
C02/ex09/: ft_strcapitalize.c
C03/ex00/: ft_strcmp.c
C03/ex01/: ft_strncmp.c
C03/ex02/: ft_strcat.c
C03/ex03/: ft_strncat.c
C03/ex04/: ft_strstr.c
C04/ex00/: ft_strlen.c
C04/ex01/: ft_putstr.c
C04/ex02/: ft_putnbr.c
C04/ex03/: ft_atoi.c
C05/ex00/: ft_iterative_factorial.c
C05/ex01/: ft_recursive_factorial.c
C05/ex02/: ft_iterative_power.c
C05/ex03/: ft_recursive_power.c
C05/ex04/: ft_fibonacci.c
C05/ex05/: ft_sqrt.c
C05/ex06/: ft_is_prime.c
C05/ex07/: ft_find_next_prime.c
C06/ex00/: ft_print_program_name.c
C06/ex01/: ft_print_params.c
C06/ex02/: ft_rev_params.c
RUSH00/: line.c  rush.c
RUSH01/: CMakeLists.txt
RUSH01/ex00/: includes.h  lib.c  lib.h  main.c  test.c
RUSH02/ex00/: lib.c  (+5 more)
(+4 files in other folders)
